tidy unused files - added config options

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <base href="/">
-  <title>Statique</title>
+  <title><!-- statique:title --></title>
 
   <link rel="stylesheet" href="build/css/main.css">
 
@@ -22,7 +21,8 @@
       <!-- profile:img --><!-- endinject -->
     </a>
     <div id="tag-line">
-      <h2>Maybe?</h2>
+      <h2><!-- statique:name --></h2>
+      <p><!-- statique:tagline --></p>
     </div>
     <div id="tags-input-container">
       <div ng-viewport="tags"></div>
