added tag directive

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
       <p><!-- statique:tagline --></p>
     </div>
     <div id="tags-input-container">
-      <div ng-viewport="tags"></div>
+      <div tag-search></div>
     </div>
   </div>
 
